Bug 1265794: P1. Ensure we can always fit a complete audio frame in an audio buffer. r=rillian

MozReview-Commit-ID: 7oF2Yp1ZQIG